Fix refresh token, improve login
