# docs/openapi.yaml
@@ -86,18 +86,18 @@ paths:
     get:
       tags:
         - Auth
-      summary: Refresh token (unavailable right now)
+      summary: Refresh token
       description: Refresh access token from user
       operationId: refreshUser
-      parameters:
-        - name: access_token
-          in: query
-          required: true
-          schema:
-            type: string
+      requestBody:
+        description: Add refresh token
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RefreshToken'
       responses:
         default:
-          description: Returns confirmation message
+          description: Returns new access token
           content:
             application/json:
               schema:
@@ -312,9 +312,15 @@ components:
     AccessToken:
       type: object
       properties:
-        access_token:
+        accessToken:
           type: string
-          example: zfxfgjchjljlsdfsdksdfsdfiddsOISJFGdfgdfgDDSfdfgdODSB
+          example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImZheWtyaXMyOEBnbWFpbC5jb2...
+    RefreshToken:
+      type: object
+      properties:
+        refreshToken:
+          type: string
+          example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImZheWtyaXMyOEBnbWFpbC5jb2...
     User:
       type: object
       properties:
